Fixing urgent 1.1 issues: - StatisticsWindow elastic (translation dependent) width - FTP log window open/close refactor - Save user settings after settings window close - Do no migration if there was no 1.0 folder - Fix Pause + Abort transfer crash - Redraw items after occupied space calculation abort - FSD menu and FTP log isn't ActivePane dependent

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
@@ -658,10 +658,10 @@
     <value>Távoli Másolás használata NAS és FTP között, ha lehetséges</value>
   </data>
   <data name="TotalFilesTransferred" xml:space="preserve">
-    <value>Másolt fájlok száma</value>
+    <value>Átmásolt fájlok összesen</value>
   </data>
   <data name="TotalBytesTransferred" xml:space="preserve">
-    <value>Másolt bájtok száma</value>
+    <value>Átmásolt bájtok összesen</value>
   </data>
   <data name="TurnOffRemoteCopyAndContinue" xml:space="preserve">
     <value>Távoli Másolás kikapcsolása és folytatás</value>
