--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
@@ -1161,4 +1161,7 @@ Ha igen, az FTP kapcsolat automatikusan kerül.</value>
   <data name="UnknownSingular" xml:space="preserve">
     <value>Ismeretlen</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Cím</value>
+  </data>
 </root>
